wip followers following

--- a/src/app/pages/profile/edit-profile/edit-profile.component.html
+++ b/src/app/pages/profile/edit-profile/edit-profile.component.html
@@ -27,7 +27,7 @@
                 <mat-chip-list *ngIf="interests">
                     <mat-chip *ngFor="let interest of interests">{{ interest }}</mat-chip>
                 </mat-chip-list>
-                <div class="followers-following" *ngIf="followers && following" matRipple>
+                <div class="followers-following" *ngIf="followers && following" matRipple (click)="openFollowDialog()">
                     <strong>{{ followers.length }}</strong> followers  |  <strong>{{ following.length }}</strong> following
                 </div>
             </div>
