--- a/src/app/pages/profile/public-profile/public-profile.component.html
+++ b/src/app/pages/profile/public-profile/public-profile.component.html
@@ -60,7 +60,7 @@
         <mat-chip-list *ngIf="interests">
           <mat-chip *ngFor="let interest of interests">{{ interest }}</mat-chip>
         </mat-chip-list>
-        <div class="followers-following">
+        <div class="followers-following" (click)="openFollowDialog()">
           <strong>{{ followers.length }}</strong> followers |
           <strong>{{ following.length }}</strong> following
         </div>
