updated service functions to use toPromise

--- a/src/app/general/dialogs/ff/ff.component.html
+++ b/src/app/general/dialogs/ff/ff.component.html
@@ -1,4 +1,6 @@
 <mat-tab-group mat-stretch-tabs>
-    <mat-tab label="Followers"></mat-tab>
+    <mat-tab label="Followers">
+        
+    </mat-tab>
     <mat-tab label="Following"></mat-tab>
 </mat-tab-group>
