--- a/src/app/general/dialogs/ff/ff.component.scss
+++ b/src/app/general/dialogs/ff/ff.component.scss
@@ -1,75 +1,95 @@
-.followers {
-    .user {
-        display: grid;
-        grid-template-columns: 50px 1fr;
-        grid-column-gap: 15px;
-        margin: 15px 0;
-        
-        .image {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            background-color: grey;
-            background-size: cover;
-            background-position: center center;
-        }
+.parent {
+  height: 100%;
+  overflow: hidden;
+  .followers {
+    height: 300px;
+    max-height: 500px;
+    overflow: hidden;
 
-        .details {
-            align-self: center;
-            span {
-                display: block;
-
-                &:nth-of-type(1) {
-                    font-size: 14px;
-                }
-
-                &:nth-of-type(2) {
-                    font-size: 12px;
-                }
-            }
-        }
+    &:hover {
+      overflow-y: scroll;
     }
-}
-
-.following {
     .user {
-        display: grid;
-        grid-template-columns: 50px 1fr 1fr;
-        grid-column-gap: 15px;
-        margin: 15px 0;
-        
-        .image {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            background-color: grey;
-            background-size: cover;
-            background-position: center center;
+      display: grid;
+      grid-template-columns: 50px 1fr;
+      grid-column-gap: 15px;
+      margin: 15px 0;
+
+      .image {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background-color: grey;
+        background-size: cover;
+        background-position: center center;
+      }
+
+      .details {
+        align-self: center;
+        span {
+          display: block;
+
+          &:nth-of-type(1) {
+            font-size: 14px;
+          }
+
+          &:nth-of-type(2) {
+            font-size: 12px;
+          }
         }
-
-        .details {
-            align-self: center;
-            span {
-                display: block;
-
-                &:nth-of-type(1) {
-                    font-size: 14px;
-                }
-
-                &:nth-of-type(2) {
-                    font-size: 12px;
-                }
-            }
-        }
-
-        div:nth-of-type(3) {
-            align-self: center;
-            justify-self: end;
-        }
+      }
     }
-}
+  }
 
-.no-data {
+  .following {
+    height: 300px;
+    max-height: 500px;
+    overflow: hidden;
+
+    &:hover {
+      overflow-y: scroll;
+    }
+    .user {
+      display: grid;
+      grid-template-columns: 50px 1fr 1fr;
+      grid-column-gap: 15px;
+      margin: 15px 0;
+
+      .image {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background-color: grey;
+        background-size: cover;
+        background-position: center center;
+      }
+
+      .details {
+        align-self: center;
+        span {
+          display: block;
+          &.name {
+            font-size: 14px;
+          }
+
+          &.username {
+            font-size: 12px;
+          }
+        }
+      }
+
+      div:nth-of-type(3) {
+        align-self: center;
+        justify-self: end;
+
+        button {
+          font-size: 12px;
+        }
+      }
+    }
+  }
+
+  .no-data {
     display: grid;
     align-self: center;
     justify-self: center;
@@ -77,5 +97,10 @@
     text-align: center;
     text-transform: uppercase;
     font-size: 12px;
+  
+    mat-progress-spinner {
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
 }
-
