added link to search page to public and edit profile

--- a/src/app/pages/profile/edit-profile/edit-profile.component.html
+++ b/src/app/pages/profile/edit-profile/edit-profile.component.html
@@ -25,7 +25,7 @@
                 </a>
                 <p class="bio" *ngIf="bio">{{ bio }}</p>
                 <mat-chip-list *ngIf="interests">
-                    <mat-chip *ngFor="let interest of interests">{{ interest }}</mat-chip>
+                    <mat-chip *ngFor="let interest of interests" (click)="goToSearch(interest)">{{ interest }}</mat-chip>
                 </mat-chip-list>
                 <div class="followers-following" *ngIf="followers && following" matRipple (click)="openFollowDialog()">
                     <strong>{{ followers.length }}</strong> followers  |  <strong>{{ following.length }}</strong> following
