--- a/src/app/pages/profile/public-profile/public-profile.component.html
+++ b/src/app/pages/profile/public-profile/public-profile.component.html
@@ -58,7 +58,7 @@
         </a>
         <p class="bio" *ngIf="bio">{{ bio }}</p>
         <mat-chip-list *ngIf="interests">
-          <mat-chip *ngFor="let interest of interests">{{ interest }}</mat-chip>
+          <mat-chip *ngFor="let interest of interests" (click)="goToSearch(interest)">{{ interest }}</mat-chip>
         </mat-chip-list>
         <div class="followers-following" (click)="openFollowDialog()">
           <strong>{{ followers.length }}</strong> followers |
