--- a/src/app/pages/profile/edit-profile/edit-profile.component.html
+++ b/src/app/pages/profile/edit-profile/edit-profile.component.html
@@ -28,7 +28,7 @@
                     <mat-chip *ngFor="let interest of interests" (click)="goToSearch(interest)">{{ interest }}</mat-chip>
                 </mat-chip-list>
                 <div class="followers-following" *ngIf="followers && following" matRipple (click)="openFollowDialog()">
-                    <strong>{{ followers.length }}</strong> followers  |  <strong>{{ following.length }}</strong> following
+                    <strong>{{ followers.length - 1 }}</strong> followers  |  <strong>{{ following.length - 1 }}</strong> following
                 </div>
             </div>
 
