--- a/src/app/pages/search-page/search-page.component.scss
+++ b/src/app/pages/search-page/search-page.component.scss
@@ -3,28 +3,52 @@
     font-weight: 400;
     margin-bottom: 0;
   }
-  .search {
-    mat-form-field {
-      margin-top: 15px;
-      width: 100%;
+  .search-container {
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 0 15px;
+    border-radius: 5px;
+    .search {
+      mat-form-field {
+        margin-top: 15px;
+        width: 100%;
+      }
+
+      mat-icon {
+        font-size: 16px;
+        color: rgba(0, 0, 0, 0.8);
+
+        fa-icon {
+          position: absolute;
+          top: 2px;
+        }
+      }
     }
 
-    mat-icon {
-      font-size: 16px;
-      color: rgba(0, 0, 0, 0.8);
+    .dropdowns {
+      display: grid;
+      font-size: 12px;
+      grid-template-columns: 1fr;
+      grid-column-gap: 15px;
+      padding-bottom: 15px;
+      align-content: center;
 
-      fa-icon {
-        position: absolute;
-        top: 2px;
+      .checkboxes {
+        align-self: center;
+        mat-checkbox:not(:last-child) {
+          margin-right: 15px;
+        }
+      }
+      mat-form-field {
+        font-size: 12px;
       }
     }
   }
 
   .search-section {
-      h3 {
-          font-family: 'Montserrat', sans-serif;
-          text-transform: uppercase;
-      }
+    h3 {
+      font-family: "Montserrat", sans-serif;
+      text-transform: uppercase;
+    }
   }
 }
 
@@ -40,5 +64,15 @@
   .list-of-collections {
     justify-items: start;
     grid-template-columns: repeat(auto-fit, 210px);
+  }
+
+  .section-container {
+    .search-container {
+      .dropdowns {
+        grid-template-columns: 200px 1fr;
+        grid-auto-rows: 55px;
+        padding-bottom: 10px;
+      }
+    }
   }
 }
