--- a/src/app/pages/search-page/search-page.component.scss
+++ b/src/app/pages/search-page/search-page.component.scss
@@ -32,12 +32,22 @@
       padding-bottom: 15px;
       align-content: center;
 
-      .checkboxes {
+      .checkboxes-container {
         align-self: center;
-        mat-checkbox:not(:last-child) {
-          margin-right: 15px;
+        p {
+          margin-bottom: 0;
+          margin-top: 0;
+          font-weight: bold;
+        }
+        .checkboxes {
+          display: grid;
+          grid-auto-columns: auto;
+          mat-checkbox:not(:last-child) {
+            margin-right: 15px;
+          }
         }
       }
+
       mat-form-field {
         font-size: 12px;
       }
@@ -72,6 +82,12 @@
         grid-template-columns: 200px 1fr;
         grid-auto-rows: 55px;
         padding-bottom: 10px;
+
+        .checkboxes-container {
+          .checkboxes {
+            display: inline-block;
+          }
+        }
       }
     }
   }
