more changes to search and resource

--- a/src/app/general/resource/resource.component.scss
+++ b/src/app/general/resource/resource.component.scss
@@ -41,11 +41,12 @@
 		.type {
 			margin-left: 0;
 		}
+	}
 
-		.actions {
-			a {
-				color: inherit;
-			}
+	.stats {
+		padding: 0 15px 15px 15px;
+		.likes {
+			font-size: 12px;
 		}
 	}
 }
