--- a/src/app/pages/manage/manage-resources/manage-resources.component.html
+++ b/src/app/pages/manage/manage-resources/manage-resources.component.html
@@ -15,8 +15,7 @@
   <div class="parent" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50"
     (scrolled)="onScrollDown()" [scrollWindow]="false">
     <div class="resource-grid">
-      <app-resource *ngFor="let resource of resources" [data]="resource" (drResponse)="drResponseHandler($event)"
-        [isInCollectionPage]="isInCollectionPage">
+      <app-resource *ngFor="let resource of resources" [data]="resource">
       </app-resource>
       <app-loading type="resource" *ngIf="isLoading"></app-loading>
     </div>
