--- a/src/app/general/resource/resource.component.html
+++ b/src/app/general/resource/resource.component.html
@@ -13,41 +13,12 @@
       *ngIf="type === 'article'"
       [innerHtml]="description | truncate: [40]"
     ></div>
-    <div class="actions">
-      <button
-        (click)="goToEdit()"
-        mat-button
-        *ngIf="loggedInUser === resourceUser"
-      >
-        <fa-icon [icon]="faEdit"></fa-icon>
-      </button>
-
-      <a [href]="url" target="_blank" *ngIf="type !== 'article'">
-        <button mat-button>
-          <fa-icon [icon]="faExternalLinkAlt"></fa-icon>
-        </button>
-      </a>
-
-      <button
-        *ngIf="!isInCollectionPage && resourceUser === loggedInUser"
-        mat-button
-        color="warn"
-        (click)="openDrDialog()"
-      >
-        <fa-icon [icon]="faTrashAlt"></fa-icon>
-      </button>
-
-      <button
-        *ngIf="isInCollectionPage && routeUser === loggedInUser"
-        mat-button
-        color="warn"
-        (click)="deleteResourceFromCollection()"
-      >
-        <fa-icon [icon]="faFolderMinus"></fa-icon>
-      </button>
+  </div>
+  <div class="stats">
+    <div class="likes" *ngIf="recommended_by_count > 0">
+      {{ recommended_by_count }} {{ (recommended_by_count === 1) ? 'like' : 'likes' }}
     </div>
   </div>
-  <div class="stats"></div>
 </div>
 
 <app-loading type="resource" *ngIf="isLoading"></app-loading>
