--- a/src/app/pages/feed/feed.component.html
+++ b/src/app/pages/feed/feed.component.html
@@ -15,7 +15,7 @@
   </div>
 </div>
 
-<div class="add-content-buttons">
+<!-- <div class="add-content-buttons">
   <button
     class="fab-add-content"
     mat-fab
@@ -55,4 +55,4 @@
       <fa-icon [icon]="faFile"></fa-icon>
     </button>
   </div>
-</div>
+</div> -->
