updated to view collection component

--- a/src/app/pages/view-collection/view-collection.component.html
+++ b/src/app/pages/view-collection/view-collection.component.html
@@ -1,6 +1,6 @@
 <div class="section-container">
   <div class="collection-data" *ngIf="collection">
-    <form [formGroup]="changeCollectionTitleForm" *ngIf="isMine">
+    <form [formGroup]="changeCollectionForm" *ngIf="isMine">
       <div class="collection-header">
         <div class="left">
           <small
