changed style of global search

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,5 +1,5 @@
 <div class="search">
-    <div class="form" [ngClass]="{ 'search-activated': isSearchActive }">
+    <div class="form">
         <div class="search-icon">
             <fa-icon [icon]="faSearch"></fa-icon>
         </div>
