--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -2,7 +2,8 @@ $image-width: 50px;
 $image-height: 50px;
 %fixed-abs {
     position: absolute;
-    left: -3.4rem;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .search {
@@ -17,6 +18,10 @@ $image-height: 50px;
         grid-gap: 15px;
         padding: 2px 30px;
         transition: border .2s ease-in-out;
+
+        &:focus-within {
+            border: 2px solid rgba(72, 26, 137, 0.5);
+        }
 
         .search-icon {
             align-self: center;
@@ -52,11 +57,77 @@ $image-height: 50px;
         max-width: 300px;
         height: auto;
         width: 300px;
-        overflow-y: auto;
-        padding: 15px 0;
+        overflow-y: hidden;
+        
+        &:hover {
+            overflow-y: auto;
+        }
     
-        h3 {
-            padding: 0 15px;
+        .section {
+            h3 {
+                padding: 10px 15px;
+                font-size: 14px;
+                border-bottom: 1px solid rgba(0, 0, 0, .1);
+            }
+
+            .item {
+                display: grid;
+                grid-template-columns: 75px 1fr;
+                grid-template-rows: auto;
+                grid-template-areas: 
+                "image name"
+                "image username";
+                cursor: pointer;
+                margin-bottom: 5px;
+                padding: 5px 0;
+        
+                p {
+                    margin: 0;
+                }
+        
+                &:hover {
+                    background-color: rgba(0, 0, 0, 0.1);
+                }
+        
+                .item-a {
+                    grid-area: image;
+                    background-color: grey;
+                    border-radius: 50%;
+                    min-width: $image-width;
+                    min-height: $image-height;
+                    width: $image-width;
+                    height: $image-height;
+                    background-size: cover;
+                    background-repeat: no-repeat;
+                    background-position: center center;
+                    align-self: center;
+                    justify-self: center;
+                }
+    
+                .item-a.collection-icon-container {
+                    position: relative;
+    
+                    .icon {
+                        color: white;
+                        position: absolute;
+                        top: 55%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                    }
+                }
+        
+                .item-b {
+                    grid-area: name;
+                    font-size: 14px;
+                }
+        
+                .item-c {
+                    margin-top: -5px;
+                    grid-area: username;
+                    font-size: 12px;
+                    color: rgba(0, 0, 0, .7);
+                }
+            }
         }
 
         .loading {
@@ -80,65 +151,6 @@ $image-height: 50px;
                 font-size: 12px;
             }
         }
-    
-        .item {
-            display: grid;
-            grid-template-columns: 75px 1fr;
-            grid-template-rows: auto;
-            grid-template-areas: 
-            "image name"
-            "image username";
-            cursor: pointer;
-            margin-bottom: 5px;
-            padding: 5px 0;
-    
-            p {
-                margin: 0;
-            }
-    
-            &:hover {
-                background-color: rgba(0, 0, 0, 0.1);
-            }
-    
-            .item-a {
-                grid-area: image;
-                background-color: grey;
-                border-radius: 50%;
-                min-width: $image-width;
-                min-height: $image-height;
-                width: $image-width;
-                height: $image-height;
-                background-size: cover;
-                background-repeat: no-repeat;
-                background-position: center center;
-                align-self: center;
-                justify-self: center;
-            }
-
-            .item-a.collection-icon-container {
-                position: relative;
-
-                .icon {
-                    color: white;
-                    position: absolute;
-                    top: 55%;
-                    left: 50%;
-                    transform: translate(-50%, -50%);
-                }
-            }
-    
-            .item-b {
-                grid-area: name;
-                font-size: 14px;
-            }
-    
-            .item-c {
-                margin-top: -5px;
-                grid-area: username;
-                font-size: 12px;
-                color: rgba(0, 0, 0, .7);
-            }
-        }
     }
 }
 
@@ -149,15 +161,15 @@ $image-height: 50px;
 @keyframes appear {
     0% {
         opacity: 0;
-        transform: translateY(-8px);
+        top: -8px;
     }
 
     50% {
-        transform: translateY(8px);
+        top: 60px;
     }
 
     100% {
         opacity: 1;
-        transform: translateY(0);
+        top: 50px;
     }
 }
