--- a/src/app/layouts/main/main.component.scss
+++ b/src/app/layouts/main/main.component.scss
@@ -28,11 +28,16 @@
 		.app-name {
 			display: none;
 			a {
+				color: #3C3C3C;
 				font-family: "Raleway", sans-serif;
 				font-weight: 200;
 				text-transform: uppercase;
-				letter-spacing: 10px;
+				letter-spacing: 8px;
 				text-decoration: none;
+
+				&:visited {
+					color: inherit;
+				}
 			}
 		}
 
