working on handling multiple image sizes for user profile image and post

--- a/src/app/pages/profile/edit-profile/edit-profile.component.html
+++ b/src/app/pages/profile/edit-profile/edit-profile.component.html
@@ -3,7 +3,7 @@
         <div class="section">
             <div class="profile-picture">
                 <div class="image-container"
-                    [ngStyle]="{ 'background-image': 'url(' + image  +')', 'cursor': 'inherit', 'border': 'none' }">
+                    [ngStyle]="{ 'background-image': 'url(' + image  +')', 'cursor': 'inherit', 'border': '2px solid transparent' }">
                 </div>
                 <div class="text">
                     <p>{{ username }}</p>
