--- a/src/app/pages/profile/public-profile/public-profile.component.html
+++ b/src/app/pages/profile/public-profile/public-profile.component.html
@@ -6,7 +6,7 @@
           class="image-container"
           [ngStyle]="{
             'background-image': 'url(' + image + ')',
-            border: 'none'
+            border: '2px solid transparent'
           }"
         ></div>
         <div class="text">
