--- a/src/assets/styles/section-container.scss
+++ b/src/assets/styles/section-container.scss
@@ -18,7 +18,7 @@
             margin-top: 25px;
 
             .image-container {
-                background-size: cover;
+                background-size: 80px;
                 background-repeat: no-repeat;
                 background-position: center center;
                 border: 3px solid white;
@@ -27,7 +27,7 @@
                 width: 75px;
                 height: 75px;
                 margin-right: 15px;
-                transition: border-color 0.2s ease-in-out;
+                transition: all 0.2s ease-in-out;
 
                 &:hover {
                     border-color: #2196F3;
