--- a/src/app/pages/manage/manage-resources/manage-resources.component.html
+++ b/src/app/pages/manage/manage-resources/manage-resources.component.html
@@ -1,19 +1,33 @@
 <div class="section-container">
-  <!-- * Search resources -->
-  <div class="search">
+  <div class="header">
+    <h3>Manage Resources</h3>
     <form [formGroup]="resourceSearchForm">
-      <mat-form-field appearance="outline">
-        <mat-label>Search</mat-label>
-        <mat-icon matPrefix>
-          <fa-icon [icon]="faSearch"></fa-icon>
-        </mat-icon>
-        <input matInput placeholder="Search for your resources" formControlName="query">
-      </mat-form-field>
+      <div class="controls">
+        <div class="control">
+          <div class="control-icon">
+            <fa-icon [icon]="faSearch"></fa-icon>
+          </div>
+          <input type="text" placeholder="Search" formControlName="query" />
+        </div>
+
+        <div class="control">
+          <div class="control-icon">
+            <fa-icon [icon]="faFilter"></fa-icon>
+          </div>
+          <input type="text" placeholder="Search" formControlName="filter" />
+        </div>
+      </div>
     </form>
   </div>
 
-  <div class="parent" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50"
-    (scrolled)="onScrollDown()" [scrollWindow]="false">
+  <div
+    class="parent"
+    infiniteScroll
+    [infiniteScrollDistance]="2"
+    [infiniteScrollThrottle]="50"
+    (scrolled)="onScrollDown()"
+    [scrollWindow]="false"
+  >
     <div class="resource-grid">
       <app-resource *ngFor="let resource of resources" [data]="resource">
       </app-resource>
@@ -21,7 +35,11 @@
     </div>
   </div>
 
-  <div class="see-more" *ngIf="!isLoading && resources.length < resourcesCount" (click)="loadMorePosts()">
+  <div
+    class="see-more"
+    *ngIf="!isLoading && resources.length < resourcesCount"
+    (click)="loadMorePosts()"
+  >
     See More
   </div>
 
