--- a/src/assets/styles/general.scss
+++ b/src/assets/styles/general.scss
@@ -1,193 +1,237 @@
 * {
-    font-family: "Hind", sans-serif;
-    
-    // width
-    &::-webkit-scrollbar {
-        width: 5px;
-  
-        &:hover {
-            width: 10px;
-        }
-      }
-  
-      // Handle
-      &::-webkit-scrollbar-thumb {
-        border-radius: 5px;  
-        background: rgb(119, 119, 119);
-  
-        &:hover {
-          background: rgb(77, 77, 77);
-        }
-      }
+  font-family: "Hind", sans-serif;
+
+  // width
+  &::-webkit-scrollbar {
+    width: 5px;
+
+    &:hover {
+      width: 10px;
+    }
+  }
+
+  // Handle
+  &::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background: rgb(119, 119, 119);
+
+    &:hover {
+      background: rgb(77, 77, 77);
+    }
+  }
 }
 
 a {
-	&:active,
-	&:focus {
-		outline: none;
-		outline-style: none;
-	}
+  &:active,
+  &:focus {
+    outline: none;
+    outline-style: none;
+  }
 }
 
 button:focus {
-	outline: 0;
+  outline: 0;
 }
 
 app-root {
-    display: block;
-    height: 100vh;
+  display: block;
+  height: 100vh;
 }
 
 .type {
-	color: white;
-	font-size: 12px;
-	padding: 5px 5px 4px 5px;
-	background-color: #481A89;
-	border-radius: 25px;
-	-webkit-box-shadow: 0px 0px 8px -1px #481A89;
-	-moz-box-shadow: 0px 0px 8px -1px #481A89;
-	box-shadow: 0px 0px 8px -1px #481A89;
-	text-align: center;
-	width: 50px;
-	margin-left: 15px;
-	margin-bottom: 15px;
+  color: white;
+  font-size: 12px;
+  padding: 5px 5px 4px 5px;
+  background-color: #481a89;
+  border-radius: 25px;
+  -webkit-box-shadow: 0px 0px 8px -1px #481a89;
+  -moz-box-shadow: 0px 0px 8px -1px #481a89;
+  box-shadow: 0px 0px 8px -1px #481a89;
+  text-align: center;
+  width: 50px;
+  margin-left: 15px;
+  margin-bottom: 15px;
 }
 
 .section-container {
-    mat-divider {
-        margin-bottom: 15px;
-    }
+  overflow-x: hidden;
+  mat-divider {
+    margin-bottom: 15px;
+  }
 
-    .section {
-        .profile-picture {
-            display: grid;
-            grid-template-columns: 90px 1fr 100px;
-            border-radius: 50%;
-            margin-bottom: 20px;
-            margin-top: 25px;
+  .section {
+    .profile-picture {
+      display: grid;
+      grid-template-columns: 90px 1fr 100px;
+      border-radius: 50%;
+      margin-bottom: 20px;
+      margin-top: 25px;
 
-            .image-container {
-                background-size: cover;
-                background-repeat: no-repeat;
-                background-position: center center;
-                border: 3px solid white;
-                box-shadow: 0 8px 20px 0 rgba(145, 145, 145, 0.6);
-                border-radius: 50%;
-                cursor: pointer;
-                width: 75px;
-                height: 75px;
-                margin-right: 15px;
-                transition: border-color 0.2s ease-in-out;
+      .image-container {
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+        border: 3px solid white;
+        box-shadow: 0 8px 20px 0 rgba(145, 145, 145, 0.6);
+        border-radius: 50%;
+        cursor: pointer;
+        width: 75px;
+        height: 75px;
+        margin-right: 15px;
+        transition: border-color 0.2s ease-in-out;
 
-                &:hover {
-                    border-color: #2196F3;
-                }
-            }
-
-            .text {
-                p {
-                    margin-bottom: 0;
-
-                    &:nth-of-type(1) {
-                        font-size: 20px;
-                        font-weight: bold;
-                        margin-top: 16px;
-                    }
-
-                    &:nth-of-type(2) {
-                        margin-top: 10px;
-                        font-size: 12px;
-                    }
-                }
-            }
-
-            .toggle-profile-view {
-                display: none;
-                align-self: center;
-                justify-self: center;
-                color: rgba(0, 0, 0, .8);
-                width: 100px;
-                font-size: 12px;
-            }
+        &:hover {
+          border-color: #2196f3;
         }
+      }
 
-        .toggle-profile-view-sm {
-            width: 100%;
-            margin-bottom: 15px;
-        }
+      .text {
+        p {
+          margin-bottom: 0;
 
-        .public-view-content {
-            h1 {
-                font-weight: 300;
-                margin-bottom: 0;
-                margin-right: 5px;
-                margin-top: 0px;
-                display: inline-flex;
-                line-height: 1;
-            }
+          &:nth-of-type(1) {
+            font-size: 20px;
+            font-weight: bold;
+            margin-top: 16px;
+          }
 
-            a {
-                background-color: rgba(0, 0, 0, 0.4);
-                border-radius: 15px;
-                color: white;
-                padding: 5px 10px;
-                text-decoration: none;
-                font-size: 12px;
-                display: inline-flex;
-                line-height: 1;
-                transition: background-color 0.3s ease-in-out;
-
-                &:hover {
-                    background-color: rgba(0, 0, 0, 0.8);
-                }
-            }
-
-            .bio {
-                line-height: 25px;
-            }
-
-            .mat-chip-list-wrapper {
-                margin-bottom: 15px;
-            }
-
-            .followers-following {
-                border-radius: 5px;
-                display: inline-block;
-                cursor: pointer;
-                padding: 10px;
-                font-size: 14px;
-                width: auto;
-            }
-        }
-
-        mat-progress-bar {
-            margin-top: 25px;
-            margin-bottom: 5px;
-        }
-
-        .complete-profile-label {
+          &:nth-of-type(2) {
+            margin-top: 10px;
             font-size: 12px;
-            color: rgba(0, 0, 0, .3);
+          }
         }
+      }
+
+      .toggle-profile-view {
+        display: none;
+        align-self: center;
+        justify-self: center;
+        color: rgba(0, 0, 0, 0.8);
+        width: 100px;
+        font-size: 12px;
+      }
     }
 
-    mat-divider {
-        margin-bottom: 15px;
+    .toggle-profile-view-sm {
+      width: 100%;
+      margin-bottom: 15px;
     }
+
+    .public-view-content {
+      h1 {
+        font-weight: 300;
+        margin-bottom: 0;
+        margin-right: 5px;
+        margin-top: 0px;
+        display: inline-flex;
+        line-height: 1;
+      }
+
+      a {
+        background-color: rgba(0, 0, 0, 0.4);
+        border-radius: 15px;
+        color: white;
+        padding: 5px 10px;
+        text-decoration: none;
+        font-size: 12px;
+        display: inline-flex;
+        line-height: 1;
+        transition: background-color 0.3s ease-in-out;
+
+        &:hover {
+          background-color: rgba(0, 0, 0, 0.8);
+        }
+      }
+
+      .bio {
+        line-height: 25px;
+      }
+
+      .mat-chip-list-wrapper {
+        margin-bottom: 15px;
+      }
+
+      .followers-following {
+        border-radius: 5px;
+        display: inline-block;
+        cursor: pointer;
+        padding: 10px;
+        font-size: 14px;
+        width: auto;
+      }
+    }
+
+    mat-progress-bar {
+      margin-top: 25px;
+      margin-bottom: 5px;
+    }
+
+    .complete-profile-label {
+      font-size: 12px;
+      color: rgba(0, 0, 0, 0.3);
+    }
+  }
+
+  mat-divider {
+    margin-bottom: 15px;
+  }
+}
+
+.popover-header {
+  border-bottom: 1px solid #dee8ff;
+  padding: 15px;
+  font-size: 14px;
+  span {
+    color: #a2a2a2;
+  }
+}
+
+.popover-item {
+  background-color: transparent;
+  padding: 15px;
+  cursor: pointer;
+  transition: background-color 75ms ease-in-out;
+
+  &:last-of-type {
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+  }
+
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+  .top {
+    font-size: 14px;
+    fa-icon {
+      color: #481a89;
+      margin-right: 10px;
+    }
+
+    span {
+      color: #481a89;
+    }
+  }
+
+  .bottom {
+    small {
+      color: #a2a2a2;
+      font-size: 12px;
+    }
+  }
 }
 
 @media (min-width: 768px) {
-    .section-container {
-        .section {
-            .profile-picture {
-                .toggle-profile-view {
-                    display: inherit;
-                }
-            }
-
-            .toggle-profile-view-sm {
-                display: none;
-            }
+  .section-container {
+    .section {
+      .profile-picture {
+        .toggle-profile-view {
+          display: inherit;
         }
+      }
+
+      .toggle-profile-view-sm {
+        display: none;
+      }
     }
+  }
 }
