--- a/src/app/general/post/po/po.component.html
+++ b/src/app/general/post/po/po.component.html
@@ -15,7 +15,7 @@
 
 <div class="popover-item" matRipple>
   <div class="top">
-    <fa-icon [icon]="faCopy"></fa-icon>
+    <fa-icon [icon]="faLink"></fa-icon>
     <span>Copy link</span>
   </div>
 
