fixed edit resource image assignment

--- a/src/app/general/post/po/po.component.html
+++ b/src/app/general/post/po/po.component.html
@@ -37,7 +37,7 @@
 
 <div class="popover-item" matRipple>
   <div class="top">
-    <fa-icon [icon]="faFlag"></fa-icon>
+    <fa-icon [icon]="faBackspace"></fa-icon>
     <span>Report</span>
   </div>
 
