wip manage page

--- a/src/app/pages/manage/manage-resources/manage-resources.component.html
+++ b/src/app/pages/manage/manage-resources/manage-resources.component.html
@@ -1,5 +1,5 @@
 <div class="section-container">
-  <div class="header">
+  <!-- <div class="header">
     <h3>Manage Resources</h3>
     <form [formGroup]="resourceSearchForm">
       <div class="controls">
@@ -18,7 +18,7 @@
         </div>
       </div>
     </form>
-  </div>
+  </div> -->
 
   <div
     class="parent"
