--- a/src/app/pages/manage/manage.component.html
+++ b/src/app/pages/manage/manage.component.html
@@ -1,1 +1,36 @@
+<div class="header">
+  <h3>Resources</h3>
+  <div class="controls">
+    <!-- Search -->
+    <div class="control">
+      <div class="control-icon">
+        <fa-icon [icon]="faSearch"></fa-icon>
+      </div>
+      <input type="text" placeholder="Search" />
+    </div>
+
+    <!-- Filter -->
+    <div class="control">
+      <div class="control-icon">
+        <fa-icon [icon]="faFilter"></fa-icon>
+      </div>
+      <input type="text" placeholder="Filter" />
+    </div>
+
+    <!-- Toggle Content Type -->
+    <div class="control-group">
+      <fa-icon [icon]="faLayerGroup"></fa-icon>
+      <span>Collections</span>
+
+      <fa-icon [icon]="faPager" style="margin-right: 10px;"></fa-icon>
+      <span>Posts</span>
+    </div>
+
+    <!-- Toggle View -->
+    <div class="control-group">
+      <fa-icon [icon]="faThLarge"></fa-icon>
+      <fa-icon [icon]="faThList"></fa-icon>
+    </div>
+  </div>
+</div>
 <app-manage-resources></app-manage-resources>
