--- a/src/app/pages/manage/manage.component.scss
+++ b/src/app/pages/manage/manage.component.scss
@@ -55,6 +55,7 @@
       border-radius: 25px;
       padding: 5px 20px;
       transition: border 0.2s ease-in-out;
+      justify-self: center;
 
       &:focus-within {
         border: 2px solid rgba(72, 26, 137, 0.5);
